# fxpy

./: .gitignore  README.md  cam_ovly.py  pyproject.toml  requirements.txt  zoom_in.py  zoom_out.py
examples/notebook/: examples.ipynb
examples/python/: cam_ovly.py  zoom_in.py  zoom_out.py
