[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fxpy"
dynamic = ["version"]
description = 'An fx library in python'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Soumalya Das", email = "geniussantu1983@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "moviepy",
  "Pillow",
  "numpy"
]

[project.urls]
Documentation = "https://github.com/pro-grammer-sd/fxpy#readme"
Issues = "https://github.com/pro-grammer-sd/fxpy/issues"
Source = "https://github.com/pro-grammer-sd/fxpy"

[tool.hatch.version]
path = "__about__.py"
